# obsidian-telegram-notes

./: .env  Dockerfile  README.md  alembic.ini  bot.py  config.cfg  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 30c861b63f42_initial.py
models/: base.py  repository.py  user.py
src/handlers/: __init__.py  base.py  github.py  start.py
src/middlewares/: logs.py
src/models/: account.py  base.py  repository.py
src/services/: database.py  states.py
src/utils/: config.py
src/utils/msg/: base.json
