[tool.poetry]
name = "obsidian-telegram-notes"
version = "0.1.0"
description = ""
authors = ["RasulMakhmudov <makhmudov_ra@vk.com>"]
readme = "README.md"
packages = [{include = "obsidian_telegram_notes"}]

[tool.poetry.dependencies]
python = "3.11"
flake8-import-order = "^0.18.2"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
pep8-naming = "^0.13.3"
flake8-bugbear = "^23.6.5"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.5"
flake8-functions = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-cognitive-complexity = "^0.1.0"
aiogram = "^2.25.1"
alembic = "^1.11.1"
gino = "^1.0.1"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
